<resources>
    <string name="app_name">LoginIntento7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresar_password">Ingresar password</string>
    <string name="ingresar_email">Ingresar email</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingrese_nombre_completo">Ingrese nombre completo</string>
    <string name="registro">Registro usuario</string>
    <string name="volver">Volver</string>
</resources>